[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.28" }
egui-probe = "0.5.1"
eframe = { version = "0.28", features = ["serde", "persistence"] }
egui_extras = { version = "0.28", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde_json = { version = "1.0" }
serde = "1.0.210"
tracing = "0.1.40"
layout-rs = "0.1.2"

[dependencies.egui-snarl]
#version = "0.4.0"
path = "../egui-snarl"
features = ["egui-probe", "serde"]
